<resources>
    <string name="app_name">Drevmass</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Вход</string>
    <string name="registration">Регистрация</string>
    <string name="onboarding_title_1">Избавьтесь от боли в спине раз и навсегда!</string>
    <string name="onboarding_title_2">Наша цель</string>
    <string name="onboarding_title_3">Спина требует ежедневного ухода!</string>
    <string name="onboarding_description">Здоровье спины – это один из основных показателей комфорта жизни.</string>
    <string name="your_name">Ваше имя</string>
    <string name="email">Email</string>
    <string name="type_password">Придумайте пароль</string>
    <string name="phone_number">Номер телефона</string>
    <string name="to_login">Войти</string>
    <string name="already_have_an_account">Уже есть аккаунт?</string>
    <string name="welcome_back">С возвращением!</string>
    <string name="password">Пароль</string>
    <string name="forgot_password">Забыли пароль?</string>
    <string name="reset_password">Сбросить пароль</string>
    <string name="clear">Понятно</string>
    <string name="forgot_string">Такого мейла не сушествует</string>
    <string name="by_popularity">По популярности</string>
    <string name="by_ascending">По возрастанию цены</string>
    <string name="by_descending">По убыванию цены</string>
</resources>